--- a/DSC291_Final-Project_2025.ipynb
+++ b/DSC291_Final-Project_2025.ipynb
@@ -2,17 +2,181 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Authors: Akbota Assan (A69037121), Devana Perupurayil (A69034326), Melissa Medina-Peregrina (A59016508)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import scipy.stats\n",
+    "import emcee\n",
+    "\n",
+    "# Load CSV files into DataFrames\n",
+    "DetectorA = pd.read_csv('DetectorA.csv')\n",
+    "DetectorB = pd.read_csv('DetectorB.csv')\n",
+    "DetectorC = pd.read_csv('DetectorC.csv')\n",
+    "DetectorTarget = pd.read_csv('DetectorTarget.csv')\n",
+    "\n",
+    "# Define parameters\n",
+    "energy_bins = np.linspace(1400, 2200, 50)\n",
+    "data_target, _ = np.histogram(DetectorTarget['energy'], bins=energy_bins)\n",
+    "dataA, _ = np.histogram(DetectorA['energy'], bins=energy_bins)\n",
+    "dataB, _ = np.histogram(DetectorB['energy'], bins=energy_bins)\n",
+    "dataC, _ = np.histogram(DetectorC['energy'], bins=energy_bins)\n",
+    "\n",
+    "# Priors for θA, θB, θC, and θNLDBD (Gaussian)\n",
+    "prior_thetaA = scipy.stats.norm(loc=1350, scale=100)\n",
+    "prior_thetaB = scipy.stats.norm(loc=770, scale=270)\n",
+    "prior_thetaC = scipy.stats.norm(loc=1500, scale=500)\n",
+    "prior_thetaNLDBD = scipy.stats.norm(loc=2039, scale=1)\n",
+    "\n",
+    "# Define Likelihood Function\n",
+    "def model(thetaA, thetaB, thetaC):\n",
+    "    return thetaA * dataA + thetaB * dataB + thetaC * dataC\n",
+    "\n",
+    "def log_likelihood(params):\n",
+    "    thetaA, thetaB, thetaC = params\n",
+    "    if thetaA < 0 or thetaB < 0 or thetaC < 0:\n",
+    "        return -np.inf\n",
+    "    model_counts = np.maximum(model(thetaA, thetaB, thetaC), 1e-6)\n",
+    "    likelihood = scipy.stats.poisson.logpmf(data_target, model_counts)\n",
+    "    return np.sum(likelihood)\n",
+    "\n",
+    "def log_prior(params):\n",
+    "    thetaA, thetaB, thetaC = params\n",
+    "    if thetaA < 0 or thetaB < 0 or thetaC < 0:\n",
+    "        return -np.inf\n",
+    "    return np.log(prior_thetaA.pdf(thetaA)) + np.log(prior_thetaB.pdf(thetaB)) + np.log(prior_thetaC.pdf(thetaC))\n",
+    "\n",
+    "def log_posterior(thetaA, thetaB, thetaC):\n",
+    "    params = (thetaA, thetaB, thetaC)\n",
+    "    lp = log_prior(params)\n",
+    "    if not np.isfinite(lp):\n",
+    "        return -np.inf\n",
+    "    return lp + log_likelihood(params)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import functools\n",
+    "import inspect\n",
+    "import emcee\n",
+    "\n",
+    "def wrap(func, **kwargs):\n",
+    "    fixed = {}\n",
+    "    names, values, lnpriors = [], [], []\n",
+    "    funcsig = inspect.signature(func)\n",
+    "    try:\n",
+    "        funcargs = {name: kwargs[name] for name in funcsig.parameters}\n",
+    "    except KeyError:\n",
+    "        raise ValueError('Missing arguments.')\n",
+    "    bound = funcsig.bind(**funcargs)\n",
+    "    bound.apply_defaults()\n",
+    "    NoPrior = lambda x: 0.\n",
+    "    for name, value in bound.arguments.items():\n",
+    "        if isinstance(value, list):\n",
+    "            names.append(name)\n",
+    "            values.append(value.pop(0))\n",
+    "            lnpriors.append(value.pop(0) if value else NoPrior)\n",
+    "            if value:\n",
+    "                raise ValueError('Invalid syntax for argument {}.'.format(name))\n",
+    "        else:\n",
+    "            fixed[name] = value\n",
+    "    partial = functools.partial(func, **fixed)\n",
+    "    def wrapped(theta):\n",
+    "        if len(theta) != len(names):\n",
+    "            raise ValueError('expected list of {} values.'.format(len(names)))\n",
+    "        result = 0.\n",
+    "        for lnprior, value in zip(lnpriors, theta):\n",
+    "            result += lnprior(value)\n",
+    "            if not np.isfinite(result):\n",
+    "                # theta is not allowed by this prior.\n",
+    "                return -np.inf\n",
+    "        args = dict(zip(names, theta))\n",
+    "        result += partial(**args)\n",
+    "        return result\n",
+    "    # Remove function args from kwargs.\n",
+    "    for name in funcargs:\n",
+    "        kwargs.pop(name, None)\n",
+    "    return wrapped, names, values, kwargs\n",
+    "\n",
+    "\n",
+    "def sample(func, names, values, nwalkers=20, nsamples=1000, abs_rms=1e-4,\n",
+    "           frac_rms=1e-3, burnin=100, random_state=None):\n",
+    "    \n",
+    "    if random_state is None:\n",
+    "        random_state = np.random.RandomState()\n",
+    "    # Generate sampler starting points.\n",
+    "    ndim = len(names)\n",
+    "    values = np.array(values, float)\n",
+    "    initial = np.tile(values, (nwalkers, 1))\n",
+    "    rms = np.maximum(abs_rms, frac_rms * values)\n",
+    "    initial += rms * random_state.normal(size=(nwalkers, ndim))\n",
+    "    # Initialize and run sampler.\n",
+    "    sampler = emcee.EnsembleSampler(nwalkers, ndim, func)\n",
+    "    n_per_chain = 1 + nsamples // nwalkers + burnin\n",
+    "    sampler.run_mcmc(initial, n_per_chain, rstate0=random_state.get_state())\n",
+    "    # Remove burnin and return results in a DataFrame.\n",
+    "    chain = sampler.chain[:, burnin:].reshape(-1, ndim)[:nsamples]\n",
+    "    return pd.DataFrame(chain, columns=names)\n",
+    "\n",
+    "\n",
+    "def MCMC_sample(func, **kwargs):\n",
+    "    # Wrap the input function.\n",
+    "    wrapped, names, values, kwargs = wrap(func, **kwargs)\n",
+    "    # Generate emcee samples.\n",
+    "    return sample(wrapped, names, values, **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = MCMC_sample(log_posterior, thetaA=[1350, prior_thetaA.logpdf], thetaB=[770, prior_thetaB.logpdf], thetaC=[1500, prior_thetaC.logpdf])\n",
+    "print(results.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
